fix(TestUtils): update code getOrCreateContact()